app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: scl
    app.kubernetes.io/component: scl
    app.kubernetes.io/instance: scl
    app.kubernetes.io/name: scl
  name: scl
spec:
  progressDeadlineSeconds: 6000
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: scl
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: scl
        deploymentconfig: scl
    spec:
      containers:
      - image: docker.io/saravana1705/scl:v2
        imagePullPolicy: IfNotPresent
        name: scl
        ports:
        - containerPort: 8083
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: scl
      serviceAccountName: scl
      terminationGracePeriodSeconds: 30
