app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scl
  name: scl
spec:
  ports:
  - name: 8083-tcp
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: scl
  sessionAffinity: None
  type: ClusterIP
