app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: scl
  name: scl
spec:
  port:
    targetPort: 8083-tcp
  to:
    kind: Service
    name: scl
    weight: 100
